--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.final_project_provider">
+    package="com.example.testing">
    <application
-        android:label="final_project_provider"
+        android:label="MyToko"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
