--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "final_project_provider",
-    "short_name": "final_project_provider",
+    "name": "testing",
+    "short_name": "testing",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
